# Airflow_CICD

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: runpod_monitor.py
tests/: test_airflow.py
