[tool.poetry]
name = "Airflow"
version = "0.1.0"
description = ""
authors = ["sebastian hansen <sebastian.hansen@dataalchemy.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
paramiko = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
